--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
       <br />
       <button class="google" id="google">Sign In With Google</button>
     </div>
+    <a href="admin.html"><button class="admin" id="admin">Go to Admin</button></a>
 
 
     <div class="questionForm hide" id="questionForm">
