--- a/bespokenAdmin.html
+++ b/bespokenAdmin.html
@@ -11,6 +11,8 @@
   <script src="https://www.gstatic.com/firebasejs/4.12.1/firebase.js"></script>
   <script src="https://www.gstatic.com/firebasejs/4.12.1/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/4.12.1/firebase-auth.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/4.12.1/firebase-database.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/4.12.1/firebase-firestore.js"></script>
   <!--Firebase Init-->
   <script type="text/javascript" src="scripts/firebaseInit.js"></script>
   <!--Materialize CSS-->
@@ -23,35 +25,22 @@
 <body>
   <div class="content">
     <img src="assets/bespoken-logo.png" class="title logo-top" />
-    <h3>Admin</h3>
-    <div id="signin">
-      <div class="form-title"><h2>Sign In</h2></div>
-      <div class="input-field">
-        <input type="email" placeholder="john@example.com" id="email" autocomplete="off"/>
-        <label for="email">Email</label>
-      </div>
-      <div class="input-field">
-        <input type="password" placeholder="*****" id="password"/>
-        <label for="password">Password</label>
-      </div>
-      <br />
-      <div class="threeButtons">
-        <button class="bespokenFormButton login" id="login">Login</button>
-        <button class="bespokenFormButton signup" id="signup">Sign Up</button>
-        <button class="bespokenFormButton google" id="google">Sign In With Google</button>
-      </div>
+    
+    <div class="scores">
+      <p class="scoreLabel">Overall Rating</p>
+      <p class="scoreLabel">Staff Rating</p>
+      <div class="scoreCircle"><p class="circle" id="overall"></p></div>
+      <div class="scoreCircle"><p class="circle" id="staff"></p></div>
     </div>
-
-
-
-
   </div>
   <footer>
-    <a href="index.html"><button class="bespokenButton admin" id="admin">Go to User</button></a>
-    <button class="bespokenButton logout hide" id="logout">Logout</button></footer>
-    <!--JS-->
-    <script type="text/javascript" src="scripts/moment.js"></script>
-    <script type="text/javascript" src="scripts/admin.js"></script>
-    <!-- <script type="text/javascript" src="scripts/authAdmin.js"></script> -->
-  </body>
-  </html>
+    <button class="logout bespokenButton" id="logout">Logout</button>
+  </footer>
+
+
+  <!--JS-->
+  <script src="https://d3js.org/d3.v5.min.js"></script>
+  <script type="text/javascript" src="scripts/moment.js"></script>
+  <script type="text/javascript" src="scripts/bespokenAdmin.js"></script>
+</body>
+</html>
