--- a/unplugAdmin.html
+++ b/unplugAdmin.html
@@ -22,12 +22,28 @@
   <!--CSS-->
   <link href="css/main.css" type="text/css" rel="stylesheet" media="screen,projection" />
 </head>
-<body>
+<body class="unplugBg">
   <div class="content">
-    <img src="assets/uploadunplug.png" class="title logo-top" />
+    <img src="assets/uploadunplug-black.png" class="title logo-top" />
+
+
+    <video autoplay muted loop id="dataVid">
+      <source src="assets/data-overlay.mp4" type="video/mp4">
+    </video>
+
+
+
   </div>
-  <footer>
-    <button class="logout" id="logout">Logout</button>
+
+
+
+
+
+
+
+
+  <footer class="unplugFooter">
+    <button class="unplugButton logout" id="logout">Logout</button>
   </footer>
 <!--JS-->
 <script type="text/javascript" src="scripts/moment.js"></script>
